workshop03/Refactor/backend-deploy-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: bggappv1-svc
  labels:
    name: bggappv1-svc
spec: 
  type: ClusterIP
  # type: LoadBalancer
  selector:
    name: bggappv1-po
  ports:
  - targetPort: 3000
    port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggappv1-deploy
  labels:
    name: bggappv1-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: bggappv1-po
  template:
    metadata:
      name: bggappv1-po
      labels: 
        name: bggappv1-po
    spec:
      containers:
      - name: bggappv1-container
        image: stackupiss/bgg-backend:v1
        imagePullPolicy: IfNotPresent
        args: ["--prefix", "/v1"]
        ports:
        - name: liveness-port
          containerPort: 3000
        livenessProbe:
          httpGet:
            path: /v1/healthz
            port: liveness-port
            scheme: HTTP
          failureThreshold: 1
          periodSeconds: 10
