workshop03/Refactor/backend-deploy-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: bggappv2-svc
  labels:
    name: bggappv2-svc
spec: 
  # type: LoadBalancer
  type: ClusterIP
  selector:
    name: bggappv2-po
  ports:
  - targetPort: 3000
    port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggappv2-deploy
  labels:
    name: bggappv2-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: bggappv2-po
  template:
    metadata:
      name: bggappv2-po
      labels: 
        name: bggappv2-po
    spec:
      containers:
      - name: bggapp-container
        image: stackupiss/bgg-backend:v2
        imagePullPolicy: IfNotPresent
        args: ["--prefix", "/v2"]
        ports:
        - name: liveness-port
          containerPort: 3000
        livenessProbe:
          httpGet:
            path: /v2/healthz
            port: liveness-port
            scheme: HTTP
          failureThreshold: 1
          periodSeconds: 10
