workshop03/Refactor/db-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: bggdb-svc
  labels:
    name: bggdb-svc
spec: 
  type: ClusterIP  # ClusterIP, NodePort LoadBalancer ExternalName
  selector:
    name: bggdb-po
  ports:
  - port: 3306
    targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggdb-deploy
  labels:
    name: bggdb-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: bggdb-po
  template:
    metadata:
      name: bggdb-po
      labels: 
        name: bggdb-po
    spec:
      containers:
      - name: bggdb-container
        image: stackupiss/bgg-database:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
